[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pyfomod"
author = "Daniel Nunes"
author-email = "daniel.henri.nunes@gmail.com"
home-page = "https://github.com/GandaG/pyfomod"
description-file = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
requires = [
    "lxml",
]

[tool.flit.metadata.requires-extra]
dev = [
    "tox",
    "bump2version",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
]
