[metadata]
name = pyfomod
version = 0.2.0
description = Parse, create and modify fomod installers.
long_description = file: README.rst
author = Daniel Nunes
author_email = daniel.henri.nunes@gmail.com
url = https://github.com/GandaG/pyfomod
classifiers = 
    ; complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
keywords = 
    fomod
    installer
    parser
license = Apache 2.0

[options]
zip_safe = False
packages = find:
install_requires = 
    lxml

[options.package_data]
pyfomod = *.xsd

[bdist_wheel]
universal = 0

[tool:pytest]
norecursedirs=tests/helpers
